# peerly

./: .dockerignore  .gitignore  DEMO_DAY_PRESENTATION.md  Dockerfile  PRESENTATION_TRANSCRIPT.md  RAILWAY_DEPLOYMENT.md  TODO.md  claude.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: base_agent.py  clarity_agent.py  orchestrator_agent.py  rag_nodes.py  review_workflow.py  rigor_agent.py
app/cache/: __init__.py  review_result_cache.py
app/config/: settings.py
app/models/: __init__.py  schemas.py
app/rag/: __init__.py  base.py  cached_rag_service.py  caching.py  config.py  rag_service.py  semantic_cache.py
app/resources/: important_tips.txt  rag_resources.md
app/routers/: files.py  latex.py  review.py
app/services/: file_service.py  latex_compiler.py  latex_parser.py
app/utils/: severity.py
data/: README.md
examples/: README.md
frontend/: index.html  package-lock.json  package.json  railway.toml  vite.config.js
scripts/: cache_stats.py  clear_cache.py  clear_review_cache.py  embed_documents.py  embed_to_railway.py  populate_railway_simple.py  prune_old_cache.py  reset-qdrant.sh  start.sh  stop.sh
tests/: README_RAG_TESTING.md  __init__.py  debug_filtering.py  debug_pdf_parsing.py  debug_semantic_cache.py  test_agent_structured_output.ipynb  test_architecture.ipynb  test_cache_performance.py  test_orchestrator_llm.ipynb  test_parallel_execution.py  test_parallel_simple.py  test_rag.ipynb  test_rag_retrieval.ipynb  test_rag_simple.py  test_review_cache.py  test_semantic_cache.py  test_workflow.py  verify_equations.py
(+237 files in other folders)
