[project]
name = "peerly-demo"
version = "0.1.0"
description = "Multi-agentic LLM co-reviewing assistant for technical manuscript writing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0,<1.0",
    "langchain-openai>=0.0.5,<1.0",
    "langchain-core>=0.1.0,<1.0",
    "langchain-community>=0.0.10,<1.0",
    "langchain-text-splitters>=0.0.1,<1.0",
    "langchain-qdrant>=0.1.0",
    "langgraph>=0.0.20",
    "qdrant-client>=1.7.0",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "fastembed>=0.2.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "unstructured[pdf]>=0.10.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "langchain-experimental>=0.0.1,<1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
